# kubeedge

./: .gitignore  .golangci.yml  .mlc_config.json  .travis.yml  ADOPTERS.md  ADOPTERS.md.bak  CHANGELOG-1.0.md  CHANGELOG-1.1.md  CHANGELOG-1.2.md  CHANGELOG-1.3.md  CHANGELOG-1.4.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gopkg.toml  MAINTAINERS  MAINTAINERS.md  Makefile  OWNERS  PRIORITY_QUEUE_IMPLEMENTATION.md  README.md  README_ko.md  README_zh.md  Tasks.json  changelog.md  codespell.cfg  codespell_whitelist.txt  config.yaml  external-dependency.md  go.mod  go.sum  go.work  go13.mod  go13.sh  go13.sum  governance.md  sonar-project.properties  test.md  verify_priority_queue.go
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml  codeql-config.yml  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  failing-test.md  question.md  release-onboarding.md
.github/workflows/: auto-test-generator.yml  build-tools.yml  buildx.yaml  checklink.yaml  checklink_config.json  cifuzz-doc.yaml  cifuzz.yml  cilium-e2e.yml  codeql-analysis.yaml  codespell.yml  cover-test.yml  dispatch.yml  docs.yml  fossa-doc.yaml  fossa.yml  keadm_compatibility.yaml  lint-chart.yaml  main-arm64.yaml  main-doc.yaml  (+8 more)
.lightly/: settings.toml
CHANGELOG/: CHANGELOG-1.1.md  CHANGELOG-1.10.md  CHANGELOG-1.11.md  CHANGELOG-1.12.md  CHANGELOG-1.13.md  CHANGELOG-1.14.md  CHANGELOG-1.15.md  CHANGELOG-1.16.md  CHANGELOG-1.17.md  CHANGELOG-1.18.md  CHANGELOG-1.19.md  CHANGELOG-1.2.md  CHANGELOG-1.20.md  CHANGELOG-1.21.md  CHANGELOG-1.22.md  CHANGELOG-1.23.md  CHANGELOG-1.3.md  CHANGELOG-1.4.md  CHANGELOG-1.5.md  CHANGELOG-1.6.md  CHANGELOG-1.7.md  CHANGELOG-1.8.md  CHANGELOG-1.9.md  CHANGELOG-before-1.0.md  OWNERS  README.md
LICENSES/: LICENSE
apidoc/: README.md
beehive/: README.md
cloud/: Makefile  README.md
cmd/: edge_core.go
conf/: edge.yaml  modules.yaml
docs/: OWNERS  README.md  charter.md  conf.py  contribute-website.md  contribute.md  getting-started.md  governance.md  governance_zh.md  index.rst  kubeedge.md  reporting_bugs.md  requirements.md  requirements.txt  roadmap.md  roadmap_zh.md  setup.md  support.md  troubleshooting.md  troubleshooting_zh.md
edge/: Makefile  README.md  README_zh.md
edgemesh/: README.md
edgesite/: Makefile  README.md
edgexmanager/: main.go
hack/: OWNERS  cilium_e2e_test.sh  clean.sh  configure_cilium.sh  copyright.go  coverage.sh  create-packages-cloudcore.sh  create-packages-edgecore.sh  generate-crds.sh  generate-dmi-proto.sh  generate-groups.sh  gofmt.sh  local-up-kubeedge.sh  setup-vmruntime.sh  setup_for_IEF.sh  sync-subproject-code.sh  update-codegen.sh  update-gofmt.sh  update-vendor-licenses.sh  update-vendor.sh  verify-apidoc.sh  verify-codegen.sh  verify-crds.sh  verify-golang.sh  verify-spelling.sh  verify-vendor-licenses.sh  verify-vendor.sh  verify.sh
helm/: cloudcore.go  helm_helper_test.go  installer.go  render.go  values_test.go
keadm/: Makefile  OWNERS  README.md  keadm.go  log
kectl/: README.md  kectl.go
kubeedgeinst/: README.md  kubeedge.go
manifests/: OWNERS  manifests.go
mappers/: README.md
mocks/: mock_muxhandler.go  mock_quickstream.go
pkg/: README.md
staging/src/github.com/kubeedge/mapper-framework-c/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  config.yaml  dump.rdb  main.c
staging/src/github.com/kubeedge/mapper-framework-c/common/: configmaptype.h  const.h  dataconverter.c  dataconverter.h  datamethod.h  datamodel.c  datamodel.h  event.c  event.h  eventtype.h  json_util.c  json_util.h  string_util.c  string_util.h
staging/src/github.com/kubeedge/mapper-framework-c/config/: config.c  config.h
staging/src/github.com/kubeedge/mapper-framework-c/data/dbmethod/: client.c  client.h  recorder.c  recorder.h
staging/src/github.com/kubeedge/mapper-framework-c/data/dbmethod/influxdb2/: influxdb2_client.c  influxdb2_client.h  recorder.c  recorder.h
staging/src/github.com/kubeedge/mapper-framework-c/data/dbmethod/mysql/: mysql_client.c  mysql_client.h  recorder.c  recorder.h
staging/src/github.com/kubeedge/mapper-framework-c/data/dbmethod/redis/: recorder.c  recorder.h  redis_client.c  redis_client.h
staging/src/github.com/kubeedge/mapper-framework-c/data/dbmethod/tdengine/: recorder.c  recorder.h  tdengine_client.c  tdengine_client.h
staging/src/github.com/kubeedge/mapper-framework-c/data/publish/: publisher.c  publisher.h
staging/src/github.com/kubeedge/mapper-framework-c/data/publish/http/: http_publisher.c  http_publisher.h
staging/src/github.com/kubeedge/mapper-framework-c/data/publish/mqtt/: mqtt_publisher.c  mqtt_publisher.h
staging/src/github.com/kubeedge/mapper-framework-c/data/publish/otel/: otel_publisher.c  otel_publisher.h
staging/src/github.com/kubeedge/mapper-framework-c/data/stream/: stream.c  stream.h
staging/src/github.com/kubeedge/mapper-framework-c/device/: dev_panel.c  dev_panel.h  device.c  device.h  devicestatus.c  devicestatus.h  devicetwin.c  devicetwin.h
staging/src/github.com/kubeedge/mapper-framework-c/dmi/v1beta1/: api.grpc.pb.cc  api.grpc.pb.h  api.pb-c.c  api.pb-c.h  api.pb.cc  api.pb.h
staging/src/github.com/kubeedge/mapper-framework-c/driver/: devicetype.h  driver.c  driver.h
staging/src/github.com/kubeedge/mapper-framework-c/google/protobuf/: any.pb-c.c  any.pb-c.h  wrappers.pb-c.c  wrappers.pb-c.h
staging/src/github.com/kubeedge/mapper-framework-c/grpcclient/: register.cc  register.h
staging/src/github.com/kubeedge/mapper-framework-c/grpcserver/: device.c  device.h  server.cc  server.h
staging/src/github.com/kubeedge/mapper-framework-c/hack/make-rules/: build.sh  generate.sh
staging/src/github.com/kubeedge/mapper-framework-c/httpserver/: httpserver.c  httpserver.h
staging/src/github.com/kubeedge/mapper-framework-c/log/: log.c  log.h
staging/src/github.com/kubeedge/mapper-framework-c/util/parse/: grpc.c  grpc.h  type.c  type.h
test/: README.md  test.go
tests/: OWNERS
tools/: degemesh-iptables.sh  istio_inbond.sh  问题.md
version/: version.go
(+4006 files in other folders)
